--- a/src/global-styles/style.scss
+++ b/src/global-styles/style.scss
@@ -3,10 +3,8 @@
 @import "styles/fonts.scss";
 
 body {
-  font-family: 'Roboto', sans-serif;
-  color: var(--color-primary);
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 p {
-  color: var(--color-on-surface);
 }
