Create CSS variables

--- a/src/global-styles/styles/root.scss
+++ b/src/global-styles/styles/root.scss
@@ -1,5 +1,10 @@
 
 :root {
-    --color-primary: #5721f2;
-    --color-on-surface: #000;
+    --color-background: #F9F8FB;
+    --color-title: #14132B; 
+    --color-description: #989BB4;
+    --color-primary: #14132B;
+    --color-secondary: #FFFFFF;
+    --color-accent-1: #7863F9; 
+    --color-accent-2: #14132B; 
 }
