Update global styles

--- a/src/global-styles/style.scss
+++ b/src/global-styles/style.scss
@@ -4,7 +4,6 @@
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-}
-
-p {
+  background-color: var(--color-background);
+  padding: 24px;
 }
